--- a/src/styles/estilosGlobais.scss
+++ b/src/styles/estilosGlobais.scss
@@ -1,11 +1,14 @@
 @import-normalize;
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
     background-image: linear-gradient(#041833, #154580);
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
   
 body::-webkit-scrollbar {
@@ -15,8 +18,9 @@ body::-webkit-scrollbar {
   body::-webkit-scrollbar-track {
     background: linear-gradient(#041833, #154580);
   }
-  
+
   body::-webkit-scrollbar-thumb {
     background-color: #154580;
     border-radius: 20px;
   }
+
