--- a/src/styles/estilosGlobais.scss
+++ b/src/styles/estilosGlobais.scss
@@ -1,4 +1,5 @@
 @import-normalize;
+@import "./variaveis";
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
@@ -6,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background-image: linear-gradient(#041833, #154580);
+    background-image: linear-gradient($azul-escuro, $azul-claro);
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
@@ -16,7 +17,7 @@ body::-webkit-scrollbar {
   }
 
   body::-webkit-scrollbar-track {
-    background: linear-gradient(#041833, #154580);
+    background: linear-gradient($azul-escuro, $azul-claro);
   }
 
   body::-webkit-scrollbar-thumb {
